# Edge-AI-Scalping

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
engine/: __init__.py  config.py  main.py  scheduler.py
engine/agents/: __init__.py  base_agent.py  data_agent.py  deploy_agent.py  eval_agent.py  live_feedback_agent.py  orchestrator.py  training_agent.py
engine/api/: schemas.py  server.py
engine/backtest/: engine.py
engine/broker/: __init__.py  alpaca_client.py
engine/data/: buffer.py  feed.py
engine/execution/: __init__.py  credit_spread_router.py  options_router.py  options_tracker.py  options_utils.py  pnl_tracker.py  risk.py  router.py  sell_put_router.py
engine/models/: features.py  model_registry.py  train.py
engine/signals/: ensemble.py  ml_inference.py  rules.py
ios/: Info.plist  open-in-xcode.sh  project.yml
ios/Assets.xcassets/LaunchBackground.colorset/: Contents.json
ios/EdgeAI/: App.swift  Theme.swift
ios/EdgeAI.xcodeproj/: project.pbxproj
ios/EdgeAI.xcodeproj/project.xcworkspace/xcuserdata/michaelm.xcuserdatad/: UserInterfaceState.xcuserstate
ios/EdgeAI.xcodeproj/xcuserdata/michaelm.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/EdgeAI/Services/: BotService.swift
ios/EdgeAI/Views/: ControlView.swift  DashboardView.swift  PositionsView.swift  SplashView.swift  TickersView.swift
scripts/: setup-ios-project.sh
tests/: test_options_tracker.py  test_pnl_tracker.py
