[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edge-ai-scalping"
version = "1.0.0"
description = "Low-latency edge AI trading bot for scalping on Alpaca"
authors = [{name = "Michael", email = "marquezmusa@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}

dependencies = [
    "alpaca-py==0.26.0",
    "numpy==1.26.4",
    "pandas==2.2.0",
    "pandas-ta==0.3.14b0",
    "fastapi==0.109.2",
    "uvicorn[standard]==0.27.0",
    "httpx==0.26.0",
    "uvloop==0.19.0",
    "lightgbm==4.2.0",
    "onnxruntime==1.17.3",
    "onnxmltools==1.13.0",
    "skl2onnx==1.16.0",
    "vectorbt==0.25.2",
    "pydantic==2.6.1",
    "pydantic-settings==2.1.0",
    "pytz==2024.1",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.0",
    "black==24.1.1",
    "ruff==0.2.1",
]

[project.scripts]
edge-ai = "engine.main:main"

[tool.uv]
python-version = "3.11"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
